bit better jakarta mail api mapping - simple java mail turned off due to incompatible api version (code still present as example, but aren't helping a lot)
